--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,10 @@ dependencies {
     //카드뷰
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation("androidx.cardview:cardview:1.0.0")
+    //레트로핏
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
+    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+    implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
 
 }
