--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
     implementation("com.squareup.retrofit2:converter-gson:2.9.0")
     implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
 
+    //이미지뷰 원형으로 보이기
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
